mobile scrollbar fix v0.4

--- a/src/scss/sections/_experience.scss
+++ b/src/scss/sections/_experience.scss
@@ -33,10 +33,13 @@
     column-gap: 30px;
     overflow-x: scroll;
     overflow-y: hidden;
+    -webkit-overflow-scrolling: touch;
+    scroll-snap-type: x mandatory;
     scrollbar-width: none;
     scrollbar-color: transparent;
 
     &::-webkit-scrollbar {
+      display: none;
       width: 0;
       -webkit-appearance: none;
       background-color: transparent;
